# fin-copilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: annotation-pipeline.md  demo.md
financebot/: __init__.py  cli.py  config.py  main.py
financebot/api/: deps.py
financebot/api/routes/: annotations.py  groups.py  insights.py  links.py  people.py  statements.py  transactions.py
financebot/db/: connection.py
financebot/db/migrations/: 001_initial.sql  003_people.sql  004_member_type.sql  005_drop_group_type.sql
financebot/db/queries/: annotations.py  links.py  transactions.py
financebot/models/: __init__.py  annotation.py  llm_response.py  transaction.py
financebot/parsers/: base.py  registry.py  upi.py
financebot/parsers/banks/: __init__.py  hdfc.py  kotak.py
financebot/pipeline/: __init__.py  annotate.py  ingest.py
financebot/tests/: __init__.py  test_annotation_pipeline.py  test_parsers.py
scripts/: backtest_counterparty_prior.py  build_golden.py  diff_reannotate_april.py  emulate_rag.py  eval.py  eval_diff.py  reembed_all.py  seed_demo_data.py  seed_test_data.py
src/: __main__.py  cli.py  config.py  main.py
src/api/: __init__.py  deps.py
src/api/routes/: __init__.py  annotations.py  categories.py  config.py  embeddings.py  groups.py  insights.py  links.py  people.py  statements.py  transactions.py
src/db/: __init__.py  connection.py
src/db/migrations/: 002_links.sql  006_seed_categories.sql  007_expand_annotation_source.sql  008_feedback_stats.sql  009_add_reimbursement_category.sql  010_provenance_dedup_indexes.sql  011_annotation_jobs.sql  012_statement_period.sql  013_category_ids.sql  014_json_list_columns.sql  015_annotation_reasoning.sql  016_app_settings.sql  017_counterparty_key.sql  018_self_transfers_category.sql  019_annotation_source_learned_rule_rag_knn.sql  020_person_relationship_and_learned_rule_suppressions.sql  021_statement_balances.sql  022_statement_account_ref.sql  023_transaction_links.sql
src/db/queries/: __init__.py  (+11 more)
src/models/: annotation.py  transaction.py
src/parsers/: __init__.py  base.py  generic.py  registry.py  upi.py
src/pipeline/: annotate.py  calibration.py  counterparty.py  embed.py  ingest.py  llm.py  rules.py  run_summary.py  sources.py
src/tests/: test_annotation_pipeline.py  test_api_routes.py  test_counterparty_prior.py  test_eval_helpers.py  test_generic_parser.py  test_ingest_balances.py  test_insights.py  test_parsers.py  test_server_entry.py
ui/: eslint.config.js  index.html  index.html.bak  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
(+45 files in other folders)
