[project]
name = "finance-copilot"
version = "0.1.0"
description = "Local-first personal finance tool: parses bank statement PDFs and auto-categorizes transactions with rules, RAG, and a local LLM."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pdfplumber>=0.11",
    "cryptography>=43",        # password-protected statement PDFs (AES)
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13",
    "sqlite-vec>=0.1.6",
    "python-ulid>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.9", # FastAPI multipart uploads (statement PDFs)
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
# Code lives in src/ and is imported as `src.*`; nothing is built or installed.
package = false

[tool.pytest.ini_options]
testpaths = ["src/tests"]
