[project]
name = "finance-copilot"
version = "0.1.0"
description = "Local-first personal finance tool: parses bank statement PDFs and auto-categorizes transactions with rules, RAG, and a local LLM."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pdfplumber>=0.11",
    "cryptography>=43",        # password-protected statement PDFs (AES)
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13",
    "sqlite-vec>=0.1.6",
    "python-ulid>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.9", # FastAPI multipart uploads (statement PDFs)
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.uv]
# Code lives in src/ and is imported as `src.*`; nothing is built or installed.
package = false

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # E501 (line length) is enforced by the formatter, not the linter, to avoid
    # fighting over long SQL strings and comments.
    "E501",
    # B008: FastAPI's Depends()/Query() in argument defaults is the framework's
    # documented, correct pattern — not the mutable-default footgun B008 targets.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# main.py deliberately runs logging.basicConfig before importing route modules
# so their import-time loggers inherit the format; that's an intentional E402.
"src/main.py" = ["E402"]
# Standalone scripts insert the repo root on sys.path before importing src.*.
"scripts/*.py" = ["E402"]
